# lambda-note

./: .gitignore  Cargo.toml  LICENSE  README.md  extension_test.py  extensions.ln  extensions.md
lambda_cli/: Cargo.toml
lambda_cli/src/: main.rs
lambda_note_lib/: Cargo.toml
lambda_note_lib/extension_examples/: example.py  simple.py
lambda_note_lib/src/: extension_manager.rs  lib.rs
lambda_note_lib/src/extensions/: alias.rs  calc.rs  code.rs  conditional.rs  define.rs  escape.rs  foreign_extensions.rs  hidden.rs  id.rs  img.rs  link.rs  maketitle.rs  math.rs  mod.rs  raw.rs
lambda_note_lib/src/parser/: block.rs  inline.rs  mod.rs
lambda_note_lib/src/translator/: html.rs  html_template.rs  latex.rs  mod.rs  utils.rs  web_preview.rs
lambda_note_syntax/: CHANGELOG.md  README.md  language-configuration.json  package.json
lambda_note_syntax/syntaxes/: lambdanote.tmLanguage.json
src/: extension_manager.rs  lib.rs  parser.rs
src/extensions/: hidden.rs  img.rs  maketitle.rs  mod.rs
src/parser/: block.rs  inline.rs  mod.rs
src/translator/: html.rs  latex.rs  mod.rs
