[package]
name = "lambda_note"
version = "0.1.0"
authors = ["Eli Adelhult <jxz2000@hotmail.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.4.5"
tst = "0.10.1"